dnl # +------------------------------------------------------------------------+
dnl # | ModShell 0.1 * Command-driven scriptable Modbus utility                |
dnl # | Copyright (C) 2023 Pozsar Zsolt <pozsarzs@gmail.com>                   |
dnl # | Makefile                                                               |
dnl # | Makefile for Unix-like systems                                         |
dnl # +------------------------------------------------------------------------+

AC_INIT
AC_CONFIG_SRCDIR([source/modshell/])
AC_CONFIG_AUX_DIR(config)
AC_CANONICAL_TARGET

AC_PATH_PROG(ln, ln, no)
AC_PATH_PROG(rm, rm, no)
AC_PATH_PROG(rmdir, rmdir, no)
AC_PATH_PROG(install, install, no)

AC_PATH_PROG(make, make, no)
test "$make" == "no" && AC_MSG_ERROR(Make utility not found!)

AC_PATH_PROG(gmake, gmake, no)
test "$gmake" == "no" && AC_MSG_WARN(GNU make utility not found!)

AC_PATH_PROG(fpc, fpc, no)
test "$fpc" == "no" && AC_MSG_ERROR(Free Pascal compiler not found!)

AC_PATH_PROG(rstconv, rstconv, no)
test "$rstconv" == "no" && AC_MSG_ERROR(Free Pascal resource string converter tool not found!)

AC_PATH_PROG(man, man, no)
test "$man" == "no" && AC_MSG_WARN(Manual pager not found!)

AC_PATH_PROG(unix2dos, unix2dos, no)
test "$unix2dos" == "no" && AC_MSG_WARN(Dos2unix text file format converter not found!)

AC_PATH_PROG(msgfmt, msgfmt, no)
test "$msgfmt" == "no" && AC_MSG_WARN(Msgfmt tool (GNU gettext utilities) not found!)

AC_PATH_PROG(iconv, iconv, no)
test "$iconv" == "no" && AC_MSG_WARN(Iconv text encoding converter tool not found!)

AC_CHECK_FILE(document/VERSION,,AC_MSG_ERROR(VERSION file not found!))
version=`cat document/VERSION`

AC_CHECK_FILE(document/copyright,,AC_MSG_ERROR(copyright file not found!))
copyright=`cat document/copyright`

os=`fpc -iSO`
architecture=`fpc -iSP`

if test $gmake != "no"
then
  make=$gmake
fi

AC_PREFIX_DEFAULT("/usr/local")
test x"$prefix" == xNONE && prefix="$ac_default_prefix"

if test $prefix == "/usr" 
then
  vardir="/var"
else
  vardir="/var/local"
fi

mandir="$prefix/man"
test "$os" = "linux" && mandir="$datarootdir/man"

bprefix="$prefix"
test "$stagedir" != "" && prefix="$stagedir"
test "$stagedir" != "" && mandir="$prefix/man"

AC_SUBST(architecture)
AC_SUBST(copyright)
AC_SUBST(os)
AC_SUBST(prefix)
AC_SUBST(version)

AC_SUBST(bindir)
AC_SUBST(bprefix)
AC_SUBST(datarootdir)
AC_SUBST(libdir)
AC_SUBST(mandir)
AC_SUBST(sysconfdir)
AC_SUBST(vardir)

AC_SUBST(fpcargs)

AC_SUBST(fpc)
AC_SUBST(iconv)
AC_SUBST(install)
AC_SUBST(ln)
AC_SUBST(man)
AC_SUBST(make)
AC_SUBST(msgfmt)
AC_SUBST(rm)
AC_SUBST(rstconv)
AC_SUBST(unix2dos)

AC_CONFIG_FILES([Makefile.global])
AC_OUTPUT

echo "
Summary
=======
    Target op. system	$os
    Target processor	$architecture
    Target directory	$prefix


  Type '${make}' for compilation and then '${make} install'.
"
test "$stagedir" != "" && echo Install to FreeBSD stage directory: $prefix
